# datasets--nuscenes

./: .gitignore  .gitmodules  README.rst  md5sums  v1.0-mini.tgz  v1.0-test_blobs.tgz  v1.0-test_meta.tgz  v1.0-trainval01_blobs.tgz  v1.0-trainval02_blobs.tgz  v1.0-trainval03_blobs.tgz  v1.0-trainval04_blobs.tgz  v1.0-trainval05_blobs.tgz  v1.0-trainval06_blobs.tgz  v1.0-trainval07_blobs.tgz  v1.0-trainval08_blobs.tgz  v1.0-trainval09_blobs.tgz  v1.0-trainval10_blobs.tgz  v1.0-trainval_meta.tgz
.datalad/: config
008/3f9/: URL-s461179800--https&c%%s3.amazonaws.com%data.n-1bfcedc1bec75444f63ef19f499458f2.log.web
034/cac/: URL-s29523743832--https&c%%s3.amazonaws.com%data.n-b4f92ca18dd25b2dd3dcbe2246fe1705.log.web
053/e5d/: URL-s27503837689--https&c%%s3.amazonaws.com%data.n-f5b9aa243bf585a6cefabefbe81f2103.log.web
064/912/: MD5E-s1887488737--0f69f720ff6e75db3a95e8e807e58422.tgz.log.web
07a/2bd/: URL-s30128325054--https&c%%s3.amazonaws.com%data.n-f5236942ac5db3d0905d8aacd5dcb2d3.log.web
083/cb3/: URL-s41740937939--https&c%%s3.amazonaws.com%data.n-9dc64b1dec0aa93405fc51040a38818c.log.web
0bf/ccb/: URL-s30128325054--https&c%%s3.amazonaws.com%data.n-681a2495c54be9491682ae1256c329af.log.web
0f6/8ce/: URL-s31574298075--https&c%%s3.amazonaws.com%data.n-a092bcfd38c554d6ba4132d355a7db75.log.web
1b8/2b2/: URL-s27503837689--https&c%%s3.amazonaws.com%data.n-a083f08c9b2061fd2f5bd64fbda0eaa6.log.web
61b/f46/: MD5E-s0--d41d8cd98f00b204e9800998ecf8427e.tgz.log.web
scripts/: compress.py  datalad.sh  download.sh  download_extract_aws-cli.sh  download_extract_git-lfs.sh  download_huggingface.sh  env.sh  extract.py  python3.sh  stats.sh  utils.sh
scripts/hf-load-dataset/: README.md  pyproject.toml
scripts/hf-load-dataset/src/hf_load_dataset/: __init__.py  load_dataset.py
(+54 files in other folders)
