[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-load-dataset"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Satya Ortiz-Gagne", email = "satya.ortiz-gagne@mila.quebec" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datasets"
]

[project.urls]
Documentation = "https://github.com/Satya Ortiz-Gagne/hf-load-dataset#readme"
Issues = "https://github.com/Satya Ortiz-Gagne/hf-load-dataset/issues"
Source = "https://github.com/Satya Ortiz-Gagne/hf-load-dataset"

[tool.hatch.version]
path = "src/hf_load_dataset/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hf_load_dataset tests}"

[tool.coverage.run]
source_pkgs = ["hf_load_dataset", "tests"]
branch = true
parallel = true
omit = [
  "src/hf_load_dataset/__about__.py",
]

[tool.coverage.paths]
hf_load_dataset = ["src/hf_load_dataset", "*/hf-load-dataset/src/hf_load_dataset"]
tests = ["tests", "*/hf-load-dataset/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
